# chip8

./: Cargo.toml  README.md
resources/test/: README.md
src/: audio.rs  cpu.rs  lib.rs  main.rs  mmu.rs  video.rs  window.rs
