[package]
name = "chip8"
version = "0.1.0"
authors = ["Neil Parsons <neilparsons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ux = "0.1.3"
fastrand = "1.4.0"
clap = "2.33.3"
tokio = { version = "1.4.0", features = ["rt", "macros", "time"] }
minifb = "0.19.3"

[dev-dependencies]
mockall = "0.9.1"
rstest = "0.7.0"