[package]
name = "chip8"
version = "0.2.0"
authors = ["npars <npars@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbintrary = "0.4.0"
fastrand = "1.4.0"
clap = { version = "4.0.17", features = ["derive"] }
tokio = { version = "1.4.0", features = ["rt", "macros", "time"] }
minifb = "0.23.0"
cpal = "0.14.0"

[dev-dependencies]
mockall = "0.11.1"
rstest = "0.15.0"
